--- a/PlanandDesign.html
+++ b/PlanandDesign.html
@@ -46,4 +46,22 @@
             </p>
             </body>
         </html>
+
+WEEK 1:
+The first thing I did when starting this project was immediately trying to think of an idea that would meet the brief. I found it quite difficult to think of a project that would help your well being. My idea came while I was a home feeling bored and I started playing a memory game on my laptop. Once I realised that this is what I wanted to do, I got to work on my code.
+
+WEEK 2: 
+It took me a while to come up the idea so I didn't start on the microbit code until week 2. I scoured the internet for the type of game I wanted and I found a website with a similar game to what I wanted. I knew I had to change a bit so I didn't just copy it from internet. I added a lot more functions, like score counter, sounds etc. This week was very productive as I finally made a proper start on my project
+
+WEEK 3:
+Week 3, I finally completed all of my microbit code and the game was working brilliant. However, that was just the easy bit as it was all going to get more difficult from here
+
+WEEK 4:
+Week 4, I started coding on Thonny to try and send data from my microbit to Thonny and then from Thonny to Firebase. I got my data successfully going from my microbit to Thonny but was having issues getting it to go from Thonny to Firebase. Looks like I'll have to wait till week 5 to finish that part
+
+WEEK 5:
+Week 5, I finally got my Thonny data to go to Firebase within the first day, meaning I could spend the rest of the week working on my graphs. The bar chart was quite simple to make but it was the line graph that posed the challenge. Trying to calculate the moving average was very difficult to the stage where I could not finish it in this week
+
+WEEK 6:
+Week 6, I completed calculating the moving average and created a line graph to display that data. 
     
